Adjusted display grid, commented out bootstrap code that's no longer needed, adjusted font spacing so everything has the same styling and is consistent

--- a/css/creative.css
+++ b/css/creative.css
@@ -76,7 +76,7 @@ h1.withbackground {
 }
 
 p {
-    margin-bottom: 120px;
+    /* margin-bottom: 120px; */
     font-size: 16px;
     line-height: 1.5;
 }
@@ -474,16 +474,53 @@ section.features .feature-item i {
 }
 /*-------------------------------------------------*/
 /*-------------------------------------------------*/
+.team2 {
+  width: 100%;
+  padding: 5rem ;
+  border-radius: 28px 28px 0 0; 
+}
+
+.head-team {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  margin: 0 auto;
+  width: 90%;
+}
+
+.volunteer-team {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  margin: 0 auto;
+  width: 90%;
+}
+
+@media (max-width: 1034px) {
+  .volunteer-team {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+}
+
+@media (max-width: 500px) {
+  .team2 {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding: 0;
+  }
+
+  .head-team {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+}
 
 .team-item {
   width: 225px;
-  height: 340px;
+  /* height: 340px; */
   border-radius: 28px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2) ;
   background: white;
-  margin-left: 20px;
-  padding-right: 15px;
-  margin: 35px;
+  /* margin-left: 20px; */
+  /* padding-right: 15px; */
+  /* margin: 35px; */
+  margin: 2rem auto;
 
   
 }
@@ -509,7 +546,7 @@ section.features .feature-item i {
 
 #team-name{
   color:black;
-  padding-left: 14px; 
+  padding: 0 14px 0 14px;  
   font-size: 21px; 
   margin-top:10px;
 }
@@ -517,7 +554,7 @@ section.features .feature-item i {
 #position-title{
   color:black;
   margin-top: -8px;
-  padding-left: 14px; 
+  padding: 0 14px 0 14px; 
   font-size:15px;
   font-weight: 500;
 }
@@ -527,7 +564,7 @@ section.features .feature-item i {
   color:black; 
   font-size: 12px;
   font-weight: 100;
-  padding-left: 14px;
+  padding: 14px;
   line-height: 1.225;
 }
 
